--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "vant": "^2.2.4",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
