--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "echarts": "^4.3.0",
     "vant": "^2.2.4",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
