--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "echarts": "^4.3.0",
-    "element-ui": "^2.12.0",
     "vant": "^2.2.4",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-slide-bar": "^1.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
